--- a/H5.md
+++ b/H5.md
@@ -6,16 +6,14 @@
  
 ## 	#265 From Full-Time Job to $30k/Month with Damon Chen of Testimonial (https://share.transistor.fm/s/cc6dba56)
 
-  Indie Hackers-podcastin episodi 265 käsittelee 
+  Indie Hackers-podcastin episodi 265 käsittelee mm. Testimonialin perustajan Damon Chenin aikaisempia projekteja ja Testimonialin historiaa.
   
 * Damon Chen perusti Testimonialin vuonna 2020
 * Toiminut aiemmin mm. uber-kuljettajana
 * Testimonial on työkalu jonka avulla nettisivut voivat esitellä eri asiakkaiden tai käyttäjien suosituksia ja kokemuksia tekstien ja videoiden avulla
 * Terstimonialin käyttö ei vaadi erityistä teknistäosaamista
+* Tuottaa yli 30k dollaria kuussa
  
-* Tarkoituksena tehdä selkeämpiä ja helppokäyttöisempiä komentoliittymiä
-* Artikkeli jakaa mielipiteitä mm. man-sivujen tärkeydestä ja niiden korvaamisesta paremmilla help-komennoilla
-* Emojien ja symbolien käyttöä tekstin sijasta vastustetaan kovasti selkeyden vuoksi
 
 
  # H5
@@ -142,6 +140,7 @@ Kohtasin seuraavanlaisen ongelman
  
 ## Lähteet
 
+Indie Hackers Episode 265 – From Full-Time Job to $30k/Month with Damon Chen of Testimonia (https://share.transistor.fm/s/cc6dba56)
 
 Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
 
