--- a/H5.md
+++ b/H5.md
@@ -12,12 +12,13 @@
 * Toiminut aiemmin mm. uber-kuljettajana
 * Testimonial on työkalu jonka avulla nettisivut voivat esitellä eri asiakkaiden tai käyttäjien suosituksia ja kokemuksia tekstien ja videoiden avulla
 * Terstimonialin käyttö ei vaadi erityistä teknistäosaamista
+* Kuukausittainen tai vuosittainen tilaus
 * Tuottaa yli 30k dollaria kuussa
  
 
 
  # H5
- Harjoituksen tarkoituksena on tutustua apache-serverin nettisivujen toimintaan ja niiden luomiseen. Tein harjoituksen omalla pöytäkoneella 02.02.2023
+ Harjoituksen tarkoituksena on tutustua apache-serverin nettisivujen toimintaan ja niiden luomiseen ja muokkaasimeen. Tarkoituksena on myös luoda uusi käyttäjä Linux-käyttöjärjestelmään. Tein harjoituksen omalla pöytäkoneella 02.02.2023
  
 
  
@@ -40,7 +41,7 @@ Aluksi tarkistin, että Apache on käynnissä komennolla
 
     $ sudo systemctl status apache2	
     
-![Add file: Upload](/ss/aparun.PNG)
+![Add file: Upload](/ss/aparun.png)
  
    Apache on käynnissä.
     
@@ -63,7 +64,7 @@ Ensiksi tarkistin käyttäjän nimen komennolla
   
     $ mkdir public_html
     
-  Ja lisäsin sinne index.html tiedoston hyödyntäen nano editoria ja käyttäen Tero Karvisen esimerkki HTML5 sivua pohjana (https://terokarvinen.com/2012/short-html5-page/) komennolla
+  Ja lisäsin sinne index.html tiedoston hyödyntäen nano-editoria ja käyttäen Tero Karvisen esimerkki HTML5 sivua pohjana (https://terokarvinen.com/2012/short-html5-page/) komennolla
   
      $ nano index.html
   
@@ -88,7 +89,7 @@ Kohtasin seuraavanlaisen ongelman
 
  ![Add file: Upload](/ss/ongelma.PNG) 
  
- Googlettamalla löysin mahdollisen syyn, mikä oli ison alkukirjaimen käyttö. Kokeilin uudella nimellä 'testr01' ja käyttäjän luominen onnistui.
+ Googlettamalla löysin mahdollisen syyn superuser-foorumilta (https://superuser.com/questions/1516008/what-does-please-enter-a-username-matching-the-regular-expression-configured-vi), mikä oli ison alkukirjaimen käyttö. Kokeilin uudella nimellä 'testr01' ja käyttäjän luominen onnistui.
  
  Seuraavaksi vaihdoin käyttäjää komennolla
  
@@ -100,13 +101,13 @@ Kohtasin seuraavanlaisen ongelman
     
   ![Add file: Upload](/ss/whoamitest.PNG)   
   
- Tarkistin myös, että apache on toiminassa vielä käyttäen tällä kertaa komentoa 
+ Tarkistin myös, että Apache on toiminassa vielä käyttäen tällä kertaa komentoa 
  
     $  curl 'http://localhost'
   
  Sillä en ollut lisännyt uutta käyttäjälle sudo oikeuksia
  
- Seuraavaksi loin testr01-käyttäjälle omat sivut käyttäen samoja komentoja kuin aikaisemmin ja hyödyntäen samaa HTML5 pohjaa.
+ Seuraavaksi loin testr01-käyttäjälle omat sivut käyttäen samoja komentoja ja hyödyntäen samaa HTML5-pohjaa kuin aikaisemmin.
  
     $ mkdir public_html
     
@@ -118,7 +119,7 @@ Kohtasin seuraavanlaisen ongelman
   
      $ curl 'http://localhost/~testr01/'
      
-  ![Add file: Upload](/ss/curltestr01.PNG)   
+  ![Add file: Upload](/ss/curltestir01.PNG)   
      
 
  ## Validi HTML5 sivu (1:37)
@@ -136,14 +137,18 @@ Kohtasin seuraavanlaisen ongelman
 
  ## Lopuksi 
  
- Tässä harjoituksessa tutustuin YCombinator Hacker News foorumiin ja komentorivin liitäntään. Lisäksi tutustuin erillaisiin lokeihin. Harjoituksessa hankaluuksia tuotti eri lokien esille saaminen ja tulkitseminen. Harjoitus tehtiin 30.1.2023 aikavälillä 14:09-17:22.
+ Tässä harjoituksessa tutustuin Indie Hackers-podcastiin ja harjoittelin Apache-esimerkkisivun muuttamista. Harjoittelin myös eri käyttäjien ja kotisivujen muokkausta ja luontia.
  
 ## Lähteet
 
 Indie Hackers Episode 265 – From Full-Time Job to $30k/Month with Damon Chen of Testimonia (https://share.transistor.fm/s/cc6dba56)
 
+Superuser-foorumi    (https://superuser.com/)
+
 Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
+
+W3C Markup Validation Service  (https://validator.w3.org/)
 
 Short HTML5 page, Tero Karvinen - 12.2.2012 (https://terokarvinen.com/2012/short-html5-page/)
 
-#### Tehnyt Roi Partanen 30.1.2023
+#### Tehnyt Roi Partanen 02.02.2023
