--- a/H5.md
+++ b/H5.md
@@ -9,7 +9,6 @@
   Indie Hackers-podcastin episodi 265 käsittelee mm. Testimonialin perustajan Damon Chenin aikaisempia projekteja ja Testimonialin historiaa.
   
 * Damon Chen perusti Testimonialin vuonna 2020
-* Toiminut aiemmin mm. uber-kuljettajana
 * Testimonial on työkalu jonka avulla nettisivut voivat esitellä eri asiakkaiden tai käyttäjien suosituksia ja kokemuksia tekstien ja videoiden avulla
 * Terstimonialin käyttö ei vaadi erityistä teknistäosaamista
 * Kuukausittainen tai vuosittainen tilaus
@@ -18,7 +17,7 @@
 
 
  # H5
- Harjoituksen tarkoituksena on tutustua apache-serverin nettisivujen toimintaan ja niiden luomiseen ja muokkaasimeen. Tarkoituksena on myös luoda uusi käyttäjä Linux-käyttöjärjestelmään. Tein harjoituksen omalla pöytäkoneella 02.02.2023
+ Harjoituksen tarkoituksena on tutustua apache-serverin nettisivujen toimintaan ja niiden luomiseen ja muokkaamiseen. Tarkoituksena on myös luoda uusi käyttäjä Linux-käyttöjärjestelmään. Tein harjoituksen omalla pöytäkoneella 02.02.2023
  
 
  
@@ -43,7 +42,7 @@ Aluksi tarkistin, että Apache on käynnissä komennolla
     
 ![Add file: Upload](/ss/aparun.png)
  
-   Apache on käynnissä.
+   Apache on käynnissä
     
  Seuraavaksi vaihdoin Apachen esimerkkisivun käyttäen komentoa
    
