--- a/H6.md
+++ b/H6.md
@@ -78,7 +78,26 @@ Seuraavaksi käytin komentoa
 
 ## Virheen vianmääritys  (1:17)
 
+Aloitin harjoituksen muokkaamalla frontpage.conf-tiedostoa komennolla
 
+    $ sudoedit /etc/apache2/sites-available/frontpage.conf
+    
+    
+ Ja poistamalla '>' merkin rivin 5 lopusta
+ 
+   ![Add file: Upload](/ss/localhostpoisto.PNG)  
+   
+  Kokeilin seuraavaksi käynnistää Apache-serverin uudestaan komennolla 
+  
+    $ sudo systemctl restart apache2
+    
+   Ja kohtasin seuraavanlaisen viestin
+   
+   ![Add file: Upload](/ss/errormsg.PNG)  
+   
+   Kokeilin seuraavaksi nettiselaimella sivua 'localhost' ja sain seuraavanlaisen ilmoituksen 
+   
+  ![Add file: Upload](/ss/problem.PNG) 
 
     $ whoami
     
