--- a/H6.md
+++ b/H6.md
@@ -30,7 +30,7 @@
 
 
 
-## Apachen-palvelimen etusivun vaihtaminen (0:36)
+## Apachen-palvelimen etusivun vaihtaminen (0:36-01:17-4.2.2023)
 
 Aluksi loin käyttäjälle 'r01' uuden kansion komennolla
 
@@ -76,107 +76,58 @@ Seuraavaksi käytin komentoa
    ![Add file: Upload](/ss/localtest.png)
       
 
-## Virheen vianmääritys  (1:17)
+## Virheen vianmääritys  (11:36-4.2.2023)
 
 Aloitin harjoituksen muokkaamalla frontpage.conf-tiedostoa komennolla
 
     $ sudoedit /etc/apache2/sites-available/frontpage.conf
     
     
- Ja poistamalla '>' merkin rivin 5 lopusta
+ Ja lisäämällä kirjoitusvirheen riville 3 'Directtory' 
  
-   ![Add file: Upload](/ss/localhostpoisto.PNG)  
+   ![Add file: Upload](/ss/ss6.1.PNG)  
    
   Kokeilin seuraavaksi käynnistää Apache-serverin uudestaan komennolla 
   
     $ sudo systemctl restart apache2
     
-   Ja kohtasin seuraavanlaisen viestin
+  Ja sain seuraavan viestin
    
-   ![Add file: Upload](/ss/errormsg.PNG)  
+   ![Add file: Upload](/ss/ss6.2.PNG)  
+      
+ 
    
-   Kokeilin seuraavaksi nettiselaimella sivua 'localhost' ja sain seuraavanlaisen ilmoituksen 
+ Kävin vielä selaimessa osoitteessa 'localhost' ja sain seuraavan viestin
+  
+  
+   ![Add file: Upload](/ss/ss6.3.PNG)  
    
-  ![Add file: Upload](/ss/problem.PNG) 
-
-    $ whoami
-    
-  ![Add file: Upload](/ss/whoami.PNG)  
-  
-  Seuraavaksi loin käyttäjälle public_html kansion käyttäen komentoa 
-  
-    $ mkdir public_html
-    
-  Ja lisäsin sinne index.html tiedoston hyödyntäen nano-editoria ja käyttäen Tero Karvisen esimerkki HTML5 sivua pohjana (https://terokarvinen.com/2012/short-html5-page/) komennolla
-  
-     $ nano index.html
-  
-  ![Add file: Upload](/ss/nanopage.PNG) 
-  
-  Lopuksi tarkistin sivun toimivuuden komennolla
-  
-     $ curl 'http://localhost/~r01/'
+   
+   Seuraavaksi menin katsomaan Apachen konfiguraatio testiä komennolla
+   
+     $ cd /usr/sbin/
      
-  ![Add file: Upload](/ss/curltesti.PNG) 
-  
-  ![Add file: Upload](/ss/thundertesti.PNG) 
+ ja
  
-
-## Uuden käyttäjän luominen (1:07)
-  
-Aloitin luomalla uuden käyttäjän komennolla
-
-    $ sudo adduser Testr01
- 
-Kohtasin seuraavanlaisen ongelman
-
- ![Add file: Upload](/ss/ongelma.PNG) 
- 
- Googlettamalla löysin mahdollisen syyn superuser-foorumilta (https://superuser.com/questions/1516008/what-does-please-enter-a-username-matching-the-regular-expression-configured-vi), mikä oli ison alkukirjaimen käyttö. Kokeilin uudella nimellä 'testr01' ja käyttäjän luominen onnistui.
- 
- Seuraavaksi vaihdoin käyttäjää komennolla
- 
-    $ su testr01
+    $ sudo apache2ctl configtest
     
- Ja tarkistin että käyttäjä vaihtui komennolla
- 
-    $ whoami
-    
-  ![Add file: Upload](/ss/whoamitest.PNG)   
-  
- Tarkistin myös, että Apache on toiminassa vielä käyttäen tällä kertaa komentoa 
- 
-    $  curl 'http://localhost'
-  
- Sillä en ollut lisännyt uutta käyttäjälle sudo oikeuksia
- 
- Seuraavaksi loin testr01-käyttäjälle omat sivut käyttäen samoja komentoja ja hyödyntäen samaa HTML5-pohjaa kuin aikaisemmin.
- 
-    $ mkdir public_html
-    
-    $ nano index.html
-    
-  ![Add file: Upload](/ss/testr01page.PNG)  
-  
-  Tarkistin sivujen toimivuuden komennolla
-  
-     $ curl 'http://localhost/~testr01/'
-     
-  ![Add file: Upload](/ss/curltestir01.PNG)   
-     
+Sain seuraavanlaisen viestin
 
- ## Validi HTML5 sivu (1:37)
+![Add file: Upload](/ss/ss6.4.PNG)
  
-  Tarkistin testr01-käyttäjän oman sivun w3:n validaattorilla (https://validator.w3.org/)
- 
-  ![Add file: Upload](/ss/validointiw3.PNG) 
-  
-  Sain huomautuksen kieli attribuutin puuttumisesta. Lisäsin sen vielä.
-  
-  
-![Add file: Upload](/ss/muutettutestr01.PNG) 
+Mikä viittaisi syntaksivirheeseen, 'frontpage.conf' sivulla, minkä johdosta konfiguraatio testi epäonnistui
 
+Kävin myös tutkimassa Apachen virhelokeja kommenolla 
 
+    $ sudo tail -1 /var/log/apache2/error.log
+    
+ Ja sain seuraavan viestin 
+   
+![Add file: Upload](/ss/ss6.5PNG)
+
+Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Seuraavaksi loki kertoo, että ohjelma on saanut pyynnön sulkeutua. 
+
+Virheloki ei kuitenkaan kerro miksi ohjelma sai pyynnön sulkeutua ja näin ollen konfiguraatio testi osoittautu paremmaksi tavaksi havaita kyseinen ongelma.
 
  ## Lopuksi 
  
@@ -184,7 +135,7 @@ Kohtasin seuraavanlaisen ongelman
  
 ## Lähteet
 
-Indie Hackers Episode 265 – From Full-Time Job to $30k/Month with Damon Chen of Testimonia (https://share.transistor.fm/s/cc6dba56)
+
 
 New Default Website with Apache2 – Tero Karvinen -16.2.2016 (https://terokarvinen.com/2016/new-default-website-with-apache2-show-your-homepage-at-top-of-example-com-no-tilde/)
 
