--- a/H6.md
+++ b/H6.md
@@ -44,9 +44,9 @@ Vaihdoin kansioon komennolla
  
     $ micro index.html
     
- ![Add file: Upload](/ss/microsite.png)   
+ ![Add file: Upload](/ss/microsite.PNG)   
  
-  ![Add file: Upload](/ss/path.png)  
+  ![Add file: Upload](/ss/path.PNG)  
     
 Seuraavaksi käytin komentoa
 
@@ -54,7 +54,7 @@ Seuraavaksi käytin komentoa
     
   Luodakseni uuden VirtualHostin ja lisäsin sinne seuraavanlaisen tiedoston käyttäen micro-editoria
   
-  ![Add file: Upload](/ss/virtualhostfile.png)  
+  ![Add file: Upload](/ss/virtualhostfile.PNG)  
   
   Seuraavaksi otin käyttöön luomani uuden sivun poistin oletussivun käytöstä komennoilla
   
@@ -71,9 +71,9 @@ Seuraavaksi käytin komentoa
       
    ja käymällä selaimen localhost-sivulla
    
-   ![Add file: Upload](/ss/curllocalhost.png)
+   ![Add file: Upload](/ss/curllocalhost.PNG)
    
-   ![Add file: Upload](/ss/localtest.png)
+   ![Add file: Upload](/ss/localtest.PNG)
       
 
 ## Virheen vianmääritys  (11:36-4.2.2023)
@@ -123,7 +123,7 @@ Kävin myös tutkimassa Apachen virhelokeja kommenolla
     
  Ja sain seuraavan viestin 
    
-![Add file: Upload](/ss/ss6.5PNG)
+![Add file: Upload](/ss/ss6.5.PNG)
 
 Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Seuraavaksi loki kertoo, että ohjelma on saanut pyynnön sulkeutua. 
 
