--- a/H6.md
+++ b/H6.md
@@ -4,7 +4,7 @@
  
  
  
-## 	 Apache Software Foundation 2023 - Getting Started (https://httpd.apache.org/docs/2.4/getting-started.html)
+## 	 Apache Software Foundation 2023: Getting Started (https://httpd.apache.org/docs/2.4/getting-started.html)
 
 
 
@@ -131,7 +131,8 @@ Virheloki ei kuitenkaan kerro miksi ohjelma sai pyynnön sulkeutua ja näin olle
 
  ## Lopuksi 
  
- Tässä harjoituksessa tutustuin Indie Hackers-podcastiin ja harjoittelin Apache-esimerkkisivun muuttamista. Harjoittelin myös eri käyttäjien ja kotisivujen muokkausta ja luontia.
+ Tässä harjoituksessa tutustuin syvemmin Apache-palvelimeen ja harjoittelin Apache-etusivun muuttamista. Harjoittelin myös Apachen vianmääritystä.
+ 
  
 ## Lähteet
 
@@ -141,8 +142,10 @@ New Default Website with Apache2 – Tero Karvinen -16.2.2016 (https://terokarvi
 
 Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
 
-W3C Markup Validation Service  (https://validator.w3.org/)
+Apache Software Foundation 2023: Getting Started (https://httpd.apache.org/docs/2.4/getting-started.html)
 
-Short HTML5 page, Tero Karvinen - 12.2.2012 (https://terokarvinen.com/2012/short-html5-page/)
+Apache Software Foundation 2023: Name-based Virtual Host Support (https://httpd.apache.org/docs/current/vhosts/name-based.html)
 
-#### Tehnyt Roi Partanen 02.02.2023
+
+
+#### Tehnyt Roi Partanen 04.02.2023
