--- a/H6.md
+++ b/H6.md
@@ -117,7 +117,7 @@ Sain seuraavanlaisen viestin
  
 Mikä viittaisi syntaksivirheeseen, 'frontpage.conf' sivulla, minkä johdosta konfiguraatio testi epäonnistui
 
-Kävin myös tutkimassa Apachen virhelokeja kommenolla 
+Kävin myös tutkimassa Apachen virhelokin viimeisintä viestiä kommenolla 
 
     $ sudo tail -1 /var/log/apache2/error.log
     
@@ -128,6 +128,57 @@ Kävin myös tutkimassa Apachen virhelokeja kommenolla
 Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Seuraavaksi loki kertoo, että ohjelma on saanut pyynnön sulkeutua. 
 
 Virheloki ei kuitenkaan kerro miksi ohjelma sai pyynnön sulkeutua ja näin ollen konfiguraatio testi osoittautu paremmaksi tavaksi havaita kyseinen ongelma.
+
+Testasin vielä, että ongelma ratkaistiin ja lokit olivat oikeassa
+
+Muokkasin frontpage.conf-tiedostoa komennolla
+
+    $ sudoedit /etc/apache2/sites-available/frontpage.conf
+
+Ja poistin kirjoitusvirheen
+
+![Add file: Upload](/ss/ss6.7.PNG)
+
+Käynnistin Apachen uudestaan kommennolla
+
+    $ sudo systemctl restart apache2
+
+Seuraavaksi tein Apachen konfiguraatio testin komennoilla
+
+   
+     $ cd /usr/sbin/
+     
+ ja
+ 
+    $ sudo apache2ctl configtest
+    
+    
+   ![Add file: Upload](/ss/ss6.8.PNG)   
+   
+  Syntaksi oli OK
+ 
+ Kävin myös katsomassa Apachen virhelokin viimeisintä viestiä
+ 
+    $ sudo tail -5 /var/log/apache2/error.log
+    
+  ![Add file: Upload](/ss/ss6.10.PNG)  
+  
+  Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Loki kertoo, että komentoa  
+  
+    $ cd /usr/sbin/apache2
+    
+  Oli käytetty aloittamaan säiettä. Virhe ei ollut siis toistunut käynnistäessä Apachea uudestaan.
+ 
+
+  
+  Tein vielä testin kommennolla
+  
+      $ curl 'localhost'
+      
+ Ja sivusto toimi
+ 
+ ![Add file: Upload](/ss/ss6.9.PNG)  
+
 
  ## Lopuksi 
  
