--- a/H6.md
+++ b/H6.md
@@ -117,17 +117,19 @@ Sain seuraavanlaisen viestin
  
 Mikä viittaisi syntaksivirheeseen, 'frontpage.conf' sivulla, minkä johdosta konfiguraatio testi epäonnistui
 
-Kävin myös tutkimassa Apachen virhelokin viimeisintä viestiä kommenolla 
+Kävin myös tutkimassa Apachen virhelokin viitä viimeisintä viestiä kommenolla 
 
-    $ sudo tail -1 /var/log/apache2/error.log
+    $ sudo tail -5 /var/log/apache2/error.log
     
- Ja sain seuraavan viestin 
+ Ja sain seuraavat lokit
    
 ![Add file: Upload](/ss/ss6.6.PNG)
 
-Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Seuraavaksi loki kertoo, että ohjelma on saanut pyynnön sulkeutua. 
+Viimeisimmässä lokissa näkyi ensin päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Seuraavaksi loki kertoo, että ohjelma on saanut pyynnön sulkeutua. 
 
-Virheloki ei kuitenkaan kerro miksi ohjelma sai pyynnön sulkeutua ja näin ollen konfiguraatio testi osoittautu paremmaksi tavaksi havaita kyseinen ongelma.
+Sitä ennen olevat lokeissa näkyy ensin päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa error-viesti) Seuraavaksi lokeissa oli listattu thread- ja prosessi-id:t (TID ja PID). Näiden jälkeen oli listattu asiakasohjelma ja sen jälkeen  viesti 'client denied by server configuration', minkä jälkeen hakemistopolku.
+
+Viestit 'client denied by configuration'  viittaisi ongelmaan Apachen konfiguraatiossa, joka estää pääsyä käsiksi hakemistoon. Mikä johtaa sitten ohjelman sulkeutumiseen.
 
 Testasin vielä, että ongelma ratkaistiin ja lokit olivat oikeassa
 
@@ -135,7 +137,7 @@ Muokkasin frontpage.conf-tiedostoa komennolla
 
     $ sudoedit /etc/apache2/sites-available/frontpage.conf
 
-Ja poistin kirjoitusvirheen
+Ja poistin kirjoitusvirheen sanasta 'Directory'
 
 ![Add file: Upload](/ss/ss6.7.PNG)
 
@@ -159,15 +161,15 @@ Seuraavaksi tein Apachen konfiguraatio testin komennoilla
  
  Kävin myös katsomassa Apachen virhelokin viimeisintä viestiä
  
-    $ sudo tail -5 /var/log/apache2/error.log
+    $ sudo tail -1 /var/log/apache2/error.log
     
   ![Add file: Upload](/ss/ss6.10.PNG)  
   
-  Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Loki kertoo, että komentoa  
+ Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Loki kertoo, että komentoa  
   
     $ cd /usr/sbin/apache2
     
-  Oli käytetty aloittamaan säiettä. Virhe ei ollut siis toistunut käynnistäessä Apachea uudestaan.
+  Oli käytetty aloittamaan säiettä. Aikaisempi virhe ei ollut siis toistunut käynnistäessä Apachea uudestaan.
  
 
   
