--- a/H6.md
+++ b/H6.md
@@ -52,7 +52,7 @@ Seuraavaksi käytin komentoa
 
     $ sudoedit /etc/apache2/sites-available/frontpage.conf
     
-  Luodakseni uuden VirtualHostin ja lisäsin sinne seuraavanlaisen tiedoston käyttäen micro-editoria
+  Luodakseni uuden etusivun ja lisäsin sinne seuraavanlaisen tiedoston käyttäen micro-editoria
   
   ![Add file: Upload](/ss/virtualhostfile.PNG)  
   
