--- a/H6.md
+++ b/H6.md
@@ -184,7 +184,7 @@ Seuraavaksi tein Apachen konfiguraatio testin komennoilla
 
  ## Lopuksi 
  
- Tässä harjoituksessa tutustuin syvemmin Apache-palvelimeen ja harjoittelin Apache-etusivun muuttamista. Harjoittelin myös Apachen vianmääritystä.
+ Tässä harjoituksessa tutustuin syvemmin Apache-palvelimeen ja harjoittelin Apachen etusivun muuttamista. Harjoittelin myös Apachen vianmääritystä.
  
  
 ## Lähteet
