--- a/H6.md
+++ b/H6.md
@@ -167,7 +167,7 @@ Seuraavaksi tein Apachen konfiguraatio testin komennoilla
   
  Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Loki kertoo, että komentoa  
   
-    $ cd /usr/sbin/apache2
+    $ /usr/sbin/apache2
     
   Oli käytetty aloittamaan säiettä. Aikaisempi virhe ei ollut siis toistunut käynnistäessä Apachea uudestaan.
  
