--- a/H6.md
+++ b/H6.md
@@ -6,11 +6,18 @@
  
 ## 	 Apache Software Foundation 2023: Getting Started (https://httpd.apache.org/docs/2.4/getting-started.html)
 
+Artikkelin tarkoituksena on toimia pohjustuksena Apachen HTTP-palvelimien ja nettisivujen toimintaan.
 
+   * Osoitteet verkossa ilmoitetaan URL:n avulla
+   * Asiakasohjelmaa (esim. nettiselain) käytetään yhdistämään palvelimeen
+   * Yhdistääkseen palvelimelle asiakasohjelman täytyy ensin yhdistää palvelimen nimi ja IP-osoite
+   * Virtual Hostien avulla pystyy ylläpitämään monia eri sivuja samalla palvelimella
+   * Apachen palvelin konfiguroidaan tekstitiedostojen avulla
+   * Lokit auttavat vianmäärityksessä ja korjauksessa
 
 ## Apache Software Foundation 2023: Name-based Virtual Host Support (https://httpd.apache.org/docs/current/vhosts/name-based.html)
  
-
+    *
 
  # H6
  Harjoituksen tarkoituksena on vaihtaa Apache-palvelimelle uusi etusivu ja harjoitella vianmääritystä. Tein harjoituksen omalla pöytäkoneella 04.02.2023.
