--- a/H6.md
+++ b/H6.md
@@ -17,7 +17,7 @@ Artikkelin tarkoituksena on toimia pohjustuksena Apachen HTTP-palvelimien ja net
 
 ## Apache Software Foundation 2023: Name-based Virtual Host Support (https://httpd.apache.org/docs/current/vhosts/name-based.html)
  
-    *
+   * Virtual Hostit voivat olla IP-osoite pohjaisia tai nimipohjaisia
 
  # H6
  Harjoituksen tarkoituksena on vaihtaa Apache-palvelimelle uusi etusivu ja harjoitella vianmääritystä. Tein harjoituksen omalla pöytäkoneella 04.02.2023.
@@ -59,11 +59,11 @@ Seuraavaksi käytin komentoa
 
     $ sudoedit /etc/apache2/sites-available/frontpage.conf
     
-  Luodakseni uuden etusivun ja lisäsin sinne seuraavanlaisen tiedoston käyttäen micro-editoria
+  Luodakseni uuden etusivun asetustiedoston ja lisäsin sinne seuraavanlaisen tiedoston käyttäen micro-editoria
   
   ![Add file: Upload](/ss/virtualhostfile.PNG)  
   
-  Seuraavaksi otin käyttöön luomani uuden sivun poistin oletussivun käytöstä komennoilla
+  Seuraavaksi otin käyttöön luomani uuden sivun asetustiedoston ja poistin oletussivun käytöstä komennoilla
   
       $ sudo a2ensite frontpage.conf
       $ sudo a2dissite 000-default.conf
