--- a/H6.md
+++ b/H6.md
@@ -16,8 +16,12 @@ Artikkelin tarkoituksena on toimia pohjustuksena Apachen HTTP-palvelimien ja net
    * Lokit auttavat vianmäärityksessä ja korjauksessa
 
 ## Apache Software Foundation 2023: Name-based Virtual Host Support (https://httpd.apache.org/docs/current/vhosts/name-based.html)
- 
-   * Virtual Hostit voivat olla IP-osoite pohjaisia tai nimipohjaisia
+   Artikkelin tarkoitus on kertoa milloin ja miten käyttää nimipohjaisia virtual hosteja
+   
+   * Virtual hostit voivat olla IP-osoite pohjaisia tai nimipohjaisia
+   * IP-pohjaiset virtual hostit tarvitsevat jokaiselle hostille oman IP-osoitteen
+   * Nimipohjaiset virtual hostit ovat yksinkertaisempia ja helpottavat vähäisten IP-osoitteiden kysyntää käyttämällä samaa IP-osoitetta eri hosteille.
+   * 
 
  # H6
  Harjoituksen tarkoituksena on vaihtaa Apache-palvelimelle uusi etusivu ja harjoitella vianmääritystä. Tein harjoituksen omalla pöytäkoneella 04.02.2023.
