--- a/H6.md
+++ b/H6.md
@@ -16,13 +16,14 @@ Artikkelin tarkoituksena on toimia pohjustuksena Apachen HTTP-palvelimien ja net
    * Lokit auttavat vianmäärityksessä ja korjauksessa
 
 ## Apache Software Foundation 2023: Name-based Virtual Host Support (https://httpd.apache.org/docs/current/vhosts/name-based.html)
-   Artikkelin tarkoitus on kertoa milloin ja miten käyttää nimipohjaisia virtual hosteja
+   Artikkelin tarkoituksena on kertoa milloin ja miten käyttää nimipohjaisia virtual hosteja
    
    * Virtual hostit voivat olla IP-osoite pohjaisia tai nimipohjaisia
    * IP-pohjaiset virtual hostit tarvitsevat jokaiselle hostille oman IP-osoitteen
    * Nimipohjaiset virtual hostit ovat yksinkertaisempia ja helpottavat vähäisten IP-osoitteiden kysyntää käyttämällä samaa IP-osoitetta eri hosteille.
-   * 
-
+   * Nimipohjainen virtual host ilmoitetaan muodossa  <VirtualHost *:80> ja sen alapuolelle määritetään ServerNamen avulla, mihin hostiin yhdistetään 
+   * ServerAlias komennolla voi määrittää useampi osoite samalla palvelimelle
+   * DocumentRoot-direktiivi kertoo missä hostin tiedostot sijaitsevat järjestelmässä
  # H6
  Harjoituksen tarkoituksena on vaihtaa Apache-palvelimelle uusi etusivu ja harjoitella vianmääritystä. Tein harjoituksen omalla pöytäkoneella 04.02.2023.
  
