--- a/H6.md
+++ b/H6.md
@@ -16,14 +16,17 @@ Artikkelin tarkoituksena on toimia pohjustuksena Apachen HTTP-palvelimien ja net
    * Lokit auttavat vianmäärityksessä ja korjauksessa
 
 ## Apache Software Foundation 2023: Name-based Virtual Host Support (https://httpd.apache.org/docs/current/vhosts/name-based.html)
-   Artikkelin tarkoituksena on kertoa milloin ja miten käyttää nimipohjaisia virtual hosteja
+   Artikkelin tarkoituksena on kertoa milloin ja miten käyttää nimipohjaisia virtual hosteja.
    
-   * Virtual hostit voivat olla IP-osoite pohjaisia tai nimipohjaisia
+   * Virtual hostit voivat olla IP-osoitepohjaisia tai nimipohjaisia
    * IP-pohjaiset virtual hostit tarvitsevat jokaiselle hostille oman IP-osoitteen
    * Nimipohjaiset virtual hostit ovat yksinkertaisempia ja helpottavat vähäisten IP-osoitteiden kysyntää käyttämällä samaa IP-osoitetta eri hosteille.
    * Nimipohjainen virtual host ilmoitetaan muodossa  <VirtualHost *:80> ja sen alapuolelle määritetään ServerNamen avulla, mihin hostiin yhdistetään 
    * ServerAlias komennolla voi määrittää useampi osoite samalla palvelimelle
    * DocumentRoot-direktiivi kertoo missä hostin tiedostot sijaitsevat järjestelmässä
+   
+   
+   
  # H6
  Harjoituksen tarkoituksena on vaihtaa Apache-palvelimelle uusi etusivu ja harjoitella vianmääritystä. Tein harjoituksen omalla pöytäkoneella 04.02.2023.
  
@@ -48,11 +51,11 @@ Aluksi loin käyttäjälle 'r01' uuden kansion komennolla
 
     $ mkdir public_sites
     
-Vaihdoin kansioon komennolla
+vaihdoin kansioon komennolla
 
     $ cd public_sites
        
- Ja  lisäsin kansioon tiedoston 'index.html', minne lisäsin tekstiä micro-editoria käyttäen, komennolla
+ ja  lisäsin kansioon tiedoston 'index.html', minne lisäsin tekstiä micro-editoria käyttäen, komennolla
  
     $ micro index.html
     
@@ -64,11 +67,11 @@ Seuraavaksi käytin komentoa
 
     $ sudoedit /etc/apache2/sites-available/frontpage.conf
     
-  Luodakseni uuden etusivun asetustiedoston ja lisäsin sinne seuraavanlaisen tiedoston käyttäen micro-editoria
+  Luodakseni uuden etusivun konfiguraation ja lisäsin sinne seuraavanlaisen tiedoston käyttäen micro-editoria
   
   ![Add file: Upload](/ss/virtualhostfile.PNG)  
   
-  Seuraavaksi otin käyttöön luomani uuden sivun asetustiedoston ja poistin oletussivun käytöstä komennoilla
+  Seuraavaksi otin käyttöön luomani uuden sivun konfiguraation ja poistin oletussivu-konfiguraation käytöstä komennoilla
   
       $ sudo a2ensite frontpage.conf
       $ sudo a2dissite 000-default.conf
@@ -95,7 +98,7 @@ Aloitin harjoituksen muokkaamalla frontpage.conf-tiedostoa komennolla
     $ sudoedit /etc/apache2/sites-available/frontpage.conf
     
     
- Ja lisäämällä kirjoitusvirheen riville 3 'Directtory' 
+ ja lisäämällä kirjoitusvirheen riville 3  'Directory' -> 'Directtory'.
  
    ![Add file: Upload](/ss/ss6.1.PNG)  
    
@@ -127,19 +130,19 @@ Sain seuraavanlaisen viestin
 
 ![Add file: Upload](/ss/ss6.4.PNG)
  
-Mikä viittaisi syntaksivirheeseen, 'frontpage.conf' sivulla, minkä johdosta konfiguraatio testi epäonnistui
+mikä viittaisi syntaksivirheeseen, 'frontpage.conf' sivulla, minkä johdosta konfiguraatio testi epäonnistui.
 
 Kävin myös tutkimassa Apachen virhelokin viitä viimeisintä viestiä kommenolla 
 
     $ sudo tail -5 /var/log/apache2/error.log
     
- Ja sain seuraavat lokit
+ jaa sain seuraavat lokit
    
 ![Add file: Upload](/ss/ss6.6.PNG)
 
 Viimeisimmässä lokissa näkyi ensin päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Seuraavaksi loki kertoo, että ohjelma on saanut pyynnön sulkeutua. 
 
-Sitä ennen olevat lokeissa näkyy ensin päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa error-viesti) Seuraavaksi lokeissa oli listattu thread- ja prosessi-id:t (TID ja PID). Näiden jälkeen oli listattu asiakasohjelma ja sen jälkeen  viesti 'client denied by server configuration', minkä jälkeen hakemistopolku.
+Sitä ennen olevissa lokeissa näkyy ensin päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa error-viesti) Seuraavaksi lokeissa oli listattu thread- ja prosessi-id:t (TID ja PID). Näiden jälkeen oli listattu asiakasohjelma ja sen jälkeen  viesti 'client denied by server configuration', minkä jälkeen hakemistopolku.
 
 Viestit 'client denied by configuration'  viittaisi ongelmaan Apachen konfiguraatiossa, joka estää pääsyä käsiksi hakemistoon. Mikä johtaa sitten ohjelman sulkeutumiseen.
 
@@ -149,7 +152,7 @@ Muokkasin frontpage.conf-tiedostoa komennolla
 
     $ sudoedit /etc/apache2/sites-available/frontpage.conf
 
-Ja poistin kirjoitusvirheen sanasta 'Directory'
+ja poistin kirjoitusvirheen sanasta 'Directory'.
 
 ![Add file: Upload](/ss/ss6.7.PNG)
 
@@ -169,9 +172,9 @@ Seuraavaksi tein Apachen konfiguraatio testin komennoilla
     
    ![Add file: Upload](/ss/ss6.8.PNG)   
    
-  Syntaksi oli OK
+  Syntaksi oli OK.
  
- Kävin myös katsomassa Apachen virhelokin viimeisintä viestiä
+ Kävin myös katsomassa Apachen virhelokin viimeisintä viestiä kommennolla
  
     $ sudo tail -1 /var/log/apache2/error.log
     
@@ -181,7 +184,7 @@ Seuraavaksi tein Apachen konfiguraatio testin komennoilla
   
     $ /usr/sbin/apache2
     
-  Oli käytetty aloittamaan säiettä. Aikaisempi virhe ei ollut siis toistunut käynnistäessä Apachea uudestaan.
+  oli käytetty aloittamaan säiettä. Aikaisempi virhe ei ollut siis toistunut käynnistäessä Apachea uudestaan.
  
 
   
@@ -189,7 +192,7 @@ Seuraavaksi tein Apachen konfiguraatio testin komennoilla
   
       $ curl 'localhost'
       
- Ja sivusto toimi
+ Ja sivusto toimi.
  
  ![Add file: Upload](/ss/ss6.9.PNG)  
 
