--- a/H10.md
+++ b/H10.md
@@ -1,20 +1,6 @@
-# x) Esimerkki Palvelusta
 
-Esimerkkinä voisi toimia Wikipedia. Käyttäjät katsovat tai luovat dataa nettisivujen kautta tietokantaan. Tietokannan käytön hyötyjä on mm. 
-
-* Tiedon saatavuus ja muokattavuus
-* Datan jakaminen
-* Ylimääräisen datan vähentäminen
-* Datan johdonmukaisuus
-* Datan turvallisuus
-* Datan eheys
-* Tietokannan koon kasvattaminen
-* Kustannukset
-
-
-# H9
- Harjoituksen tarkoituksena on asentaa PostgreSQL ja harjoitella datan luomista, lukemista, päivittämistä ja poistoa.
-
+# H10 
+ Harjoituksen tarkoituksena on luoda tietokantasovellus, jossa on weppiliittymä hyödyntäen Djangon kehityspalvelinta.
  
  
 ### Laitteisto
@@ -30,32 +16,55 @@ Esimerkkinä voisi toimia Wikipedia. Käyttäjät katsovat tai luovat dataa nett
 
 
 
-## PostgreSQL:n asentaminen ja testaaminen (0:00-0:55)
+## Kehitysympäristön asentaminen (9:56)
 
-Aloitin harjoituksen asentamalla PostgreSQL:n komenoilla:
+Aloitin harjoituksen asentamalla virtualenv-työkalun komenoilla:
 
     $ sudo apt-get update
-    $ sudo apt-get -y install postgresql
+    $ sudo apt-get -y install virtualenv
     
-Tämän jälkeen käynnistin postgreSQL:n komennolla:
+Seuraavaksi loin uuden kansion ja liitn siihen viimeisimmät Python paketit komennolla:
 
-    $ sudo systemctl start postgresql
+    $ virtualenv --system-site-packages -p python3 env/
     
-Seuraavaksi loin uuden tietokannan ja lisäsin käyttäjän kommenoilla:
+![image](https://user-images.githubusercontent.com/106889187/221125515-27817450-2c59-4d18-a6f1-991cdb600842.png)
 
-    $ sudo -u postgres createdb r01p4r
-    $ sudo -u postgres createuser r01p4r
-  
-![Add file: Upload](/ss/h91.PNG)
+Tämän jälkeen aktivoin uuden virtuaaliympäristön komennolla:
 
-  Seuraavaksi testasin postgreSQL:n toimivuuden komennolla:
-   
-    $ psql
+    $ source env/bin/activate
+    
+ Ja siirryin asentamaan paketteja virtuaaliympäristöön komennolla:
+ 
+    $ which pip
+
+Tämän jälkeen asensin micro-tekstieditorin komennolla ja loin sen avulla tekstitiedoston 'django' komennoilla:
+
+    $ sudo apt-get install micro
+    $ micro requirements.txt 
+    
+ ![image](https://user-images.githubusercontent.com/106889187/221127206-f2077b4d-23c5-4b51-b519-66ca028204b3.png)
   
-  ![Add file: Upload](/ss/h92.PNG)
   
-  PostgreSQL toimii.
-     
+Tarkistin tiedoston onnistuneen luomisen komennolla:
+ 
+    $ cat requirements.txt
+    
+    
+![image](https://user-images.githubusercontent.com/106889187/221127433-86dbbb8f-37db-479f-aa22-4b2e9f13e2d1.png)
+
+Seuraavaksi asensin Djangon komennolla:
+
+    $ pip install -r requirements.txt
+
+Lopuksi tarkistin Djangon asentumisen ja version komennolla:
+
+    $ django-admin --version
+  
+![image](https://user-images.githubusercontent.com/106889187/221127908-0e4e9cbd-aafb-4284-b7cd-0ac5f4c28dd3.png)
+
+
+  
+  
    
 
 ## CRUD (0:13)
