--- a/H10.md
+++ b/H10.md
@@ -23,7 +23,7 @@ Aloitin harjoituksen asentamalla virtualenv-työkalun komenoilla:
     $ sudo apt-get update
     $ sudo apt-get -y install virtualenv
     
-Seuraavaksi loin uuden kansion ja liitn siihen viimeisimmät Python paketit komennolla:
+Seuraavaksi loin uuden kansion ja liitin siihen viimeisimmät Python paketit komennolla:
 
     $ virtualenv --system-site-packages -p python3 env/
     
@@ -37,10 +37,12 @@ Tämän jälkeen aktivoin uuden virtuaaliympäristön komennolla:
  
     $ which pip
 
-Tämän jälkeen asensin micro-tekstieditorin komennolla ja loin sen avulla tekstitiedoston 'django' komennoilla:
+Tämän jälkeen asensin micro-tekstieditorin ja listasin sen avulla Django paketin tekstitiedostona komennoilla:
 
     $ sudo apt-get install micro
     $ micro requirements.txt 
+    
+ Lisäsin tekstitiedostoon sisälle 'django'.
     
  ![image](https://user-images.githubusercontent.com/106889187/221127206-f2077b4d-23c5-4b51-b519-66ca028204b3.png)
   
