--- a/H10.md
+++ b/H10.md
@@ -16,14 +16,14 @@
 
 
 
-## Kehitysympäristön asentaminen (9:56)
+## Kehitysympäristön asentaminen (9:56-10:27--24.2.2023)
 
 Aloitin harjoituksen asentamalla virtualenv-työkalun komenoilla:
 
     $ sudo apt-get update
     $ sudo apt-get -y install virtualenv
     
-Seuraavaksi loin uuden kansion ja liitin siihen viimeisimmät Python paketit komennolla:
+Seuraavaksi loin uuden virtuaaliympäristön ja liitin siihen viimeisimmät Python paketit komennolla:
 
     $ virtualenv --system-site-packages -p python3 env/
     
@@ -33,7 +33,7 @@ Tämän jälkeen aktivoin uuden virtuaaliympäristön komennolla:
 
     $ source env/bin/activate
     
- Ja siirryin asentamaan paketteja virtuaaliympäristöön komennolla:
+ Ja tarkistin, että paketit tullaan asentamaan virtuaaliympäristöön komennolla:
  
     $ which pip
 
@@ -54,7 +54,7 @@ Tarkistin tiedoston onnistuneen luomisen komennolla:
     
 ![image](https://user-images.githubusercontent.com/106889187/221127433-86dbbb8f-37db-479f-aa22-4b2e9f13e2d1.png)
 
-Seuraavaksi asensin Djangon komennolla:
+Seuraavaksi asensin Djangon tekstitiedoston avulla komennolla:
 
     $ pip install -r requirements.txt
 
@@ -69,11 +69,42 @@ Lopuksi tarkistin Djangon asentumisen ja version komennolla:
   
    
 
-## CRUD (0:13)
+## DJANGO (9:21--27.2.2023)
 
-Siirryin PostgreSQL:ään komenolla:
+Aluksi siirryin aikaisemmin luotoon virtuaaliympäristöön komennoll:
 
-    $ psql
+    $ source env/bin/activate
+
+![image](https://user-images.githubusercontent.com/106889187/221499957-02dc91dc-b5e1-430d-85c9-e2b4df316b8c.png)
+ 
+Ja alotin uuden projektin komennolla:
+
+    $ django-admin startproject idea
+    
+Vaihdoin uuden projectin hakemistoon komennolla:
+
+    $ cd idea
+    
+Ja suoritin seuraavan komennon aloittaakseni kehitysserverin:
+
+    $ ./manage.py runserver
+    
+Sain seuraavanlaisen viestin, joka kertoo tietokantojen päivittämisen tarpeesta. 
+
+  ![image](https://user-images.githubusercontent.com/106889187/221500795-8b58fa6b-d7ff-441d-8914-91a29986d476.png)
+  
+Tarkistetaan ensin, että kehitysserveri toimii selaimessa.
+
+![image](https://user-images.githubusercontent.com/106889187/221501460-59d71fbd-17c0-4ec7-a0d6-3e320e30b1bd.png)
+
+Kehitysserveri on tominnassa. Päivitin seuraavaksi tietokannat ensin sulkemalla serverin CONTROL-C ja sen jälkeen komennoilla:
+
+    $ ./manage.py makemigrations
+    $ ./manage.py migrate
+
+![image](https://user-images.githubusercontent.com/106889187/221502087-a485b27f-e687-4dd5-87c9-9fcbc52a40b1.png)
+
+
     
  Ja loin uuden taulukon komennolla:
   
