--- a/H10.md
+++ b/H10.md
@@ -16,7 +16,7 @@
 
 
 
-## Kehitysympäristön asentaminen (9:56-10:27--24.2.2023)
+## Kehitysympäristön asentaminen (9:56-10:27 -- 24.2.2023)
 
 Aloitin harjoituksen asentamalla virtualenv-työkalun komenoilla:
 
@@ -69,7 +69,7 @@ Lopuksi tarkistin Djangon asentumisen ja version komennolla:
   
    
 
-## DJANGO (9:21--27.2.2023)
+## DJANGO (9:21 -- 27.2.2023)
 
 Aluksi siirryin aikaisemmin luotoon virtuaaliympäristöön komennoll:
 
@@ -105,65 +105,39 @@ Kehitysserveri on tominnassa. Päivitin seuraavaksi tietokannat ensin sulkemalla
 ![image](https://user-images.githubusercontent.com/106889187/221502087-a485b27f-e687-4dd5-87c9-9fcbc52a40b1.png)
 
 
-    
- Ja loin uuden taulukon komennolla:
-  
-    r01p4r=> CREATE TABLE students (id SERIAL PRIMARY KEY, name VARCHAR(200));
-    
-   ![Add file: Upload](/ss/h93.PNG)  
-    
-Avasin taulukon komennolla:
+Seuraavaksi asensin pwgen-salasana ohjelman nopeuttamaan uusien käyttäjien luontia komennolla:
 
-    r01p4r=> \d students
-    
-![Add file: Upload](/ss/h94.PNG)  
-
-Seuraavaksi lisäsin taulukkoon nimiä käyttäen komentoja:
-
-    
-    r01p4r=> INSERT INTO students(name) VALUES ('Sami');
-    r01p4r=> INSERT INTO students(name) VALUES ('Lotta');
-    r01p4r=> INSERT INTO students(name) VALUES ('Roi');
-    
-Tarkistin nimien lisäämisen komennolla:
-
-    r01p4r=> SELECT * FROM students;
-    
+    $ sudo apt-get install pwgen
+      
+ Loin uuden satunnaisen salasanan komennolla:
  
-![Add file: Upload](/ss/h95.PNG)  
+    $  pwgen -s 20 1
 
+Tämän jälkeen loin uuden ylläpitäjän komennolla:
 
-Seuraavaksi päivitin yhtä taulukon nimeä komennolla:
+    $ ./manage.py createsuperuser
 
-    r01p4r=> UPDATE students SET name='Roi Moi' WHERE name='Roi';
+![image](https://user-images.githubusercontent.com/106889187/221504426-b880e244-c578-4ca4-8a2e-550dd7e66321.png)
+
+Seuraavaksi käynnistin kehitysserverin uudestaan komennolla:
+
+    $ ./manage.py runserver
     
- Tarkistin nimen päivittymistä komennolla:
+Ja siirryin ylläpitäjän sivuille lisäämällä serverin osoitteeseen loppuun '/admin'.
 
-    r01p4r=> select * from students;
+![image](https://user-images.githubusercontent.com/106889187/221504964-894fd8c3-87d4-4599-95d9-8c46c46f657f.png)
 
-![Add file: Upload](/ss/h96.PNG)  
+Kirjauduin sisään onnistuneesti luomillani ylläpitäjän tunnuksilla.
 
+![image](https://user-images.githubusercontent.com/106889187/221505263-0b046166-48b6-4fe1-838e-bf24b487f149.png)
 
-   Seuraavaksi poistin nimen 'Sami' taulukosta students komennolla:
-   
-      r01p4r=> DELETE FROM students WHERE name='Sami';
-      
-  Tarkastelin nimen poiston onnistuneisuutta komennolla:
+Tämän jälkeen loin ylläpitäjänä vielä yhden uuden käyttäjän 'red2' ja annoin sille staff- ja superuser-oikeudet.
 
-    r01p4r=> select * from students;
-    
-   ![Add file: Upload](/ss/h97.PNG)  
-    
-    
-    
-    
+![image](https://user-images.githubusercontent.com/106889187/221506799-43e3567c-c20d-4879-859d-fe3f0eaf82b5.png)
 
-      
-   
+Onnistuin kirjautumaan sisään uudella käyttäjällä '/admin' osoitteen kautta.
 
-
-
-
+## Tietokanta (10:02 -- 27.2.2023)
 
  ## Lopuksi 
  
@@ -181,4 +155,4 @@ PostgreSQL Install and One Table Database – SQL CRUD tutorial for Ubuntu, Tero
 
 
 
-#### Tehnyt Roi Partanen 16.2.2023
+#### Tehnyt Roi Partanen (24.2.2023 ja 27.2.2023)
