--- a/H10.md
+++ b/H10.md
@@ -139,6 +139,34 @@ Onnistuin kirjautumaan sisään uudella käyttäjällä '/admin' osoitteen kautt
 
 ## Tietokanta (10:02 -- 27.2.2023)
 
+Aloitin tietokannan luonnin virtuaaliympäristöön komennolla:
+
+    $ ./manage.py startapp students
+    
+Tämän jälkeen avasin micro-editorilla 'settings.py' tiedoston  komennolla:
+
+    $ micro idea/settings.py
+    
+ Ja lisäsin 'INSTALLED_APPS' kohtaan 'students'.
+ 
+ ![image](https://user-images.githubusercontent.com/106889187/221513105-48cfdd83-3533-4fb7-b51c-5e02a1e90cdf.png)
+
+Seuraavaksi siirryin lisäämän malleja tietokannalle micro-editorilla komenolla:
+
+    $ micro students/models.py
+ 
+Lisäsin luokan 'students', joka sisältää muuttujat 'name', 'age' ja 'language'.
+
+![image](https://user-images.githubusercontent.com/106889187/221517913-02d86e5b-4f16-4692-83f5-4dd4131c0a9b.png)
+
+
+
+
+Tämän jälkeen päivitin tietokannat komennoilla:
+
+    $ ./manage.py makemigrations
+    $ ./manage.py migrate
+
  ## Lopuksi 
  
  Tässä harjoituksessa asensin PostgreSQL:n ja harjoittelin datan luomista, lukemista, päivittämistä ja poistoa.
