--- a/H10.md
+++ b/H10.md
@@ -166,6 +166,33 @@ Tämän jälkeen päivitin tietokannat komennoilla:
 
     $ ./manage.py makemigrations
     $ ./manage.py migrate
+    
+  
+ ![image](https://user-images.githubusercontent.com/106889187/221518239-e9d99a6d-2330-4290-b6f6-53ce242ae9c3.png)
+ 
+ Seuraavaksi rekisteröin tietokannan muokkaamalla 'students/admin.py' tiedostoa, käyttäen micro-editoria komennolla:
+ 
+    $ micro students/admin.py
+    
+ Ja muokkaamalla tiedostoa seuraavanlaisesti:
+ 
+    from django.contrib import admin
+    from . import models
+    # Register your models here.
+    admin.site.register(models.students)
+ 
+ ![image](https://user-images.githubusercontent.com/106889187/221520216-693a86bd-c0cd-4f2e-91d9-2a0ae81c6640.png)
+
+
+ Seuraavaksi tarkistin uuden tietokannan tomimivuuden ja muokattavuuden ensiksi käynnistämällä kehitysserverin komennolla:
+ 
+    $ ./manage.py runserver
+ 
+Ja siirymällä kirjautumaan admin-käyttäjänä selaimessa serverin osoitteessa:
+
+    http://127.0.0.1:8000/admin/
+  
+  
 
  ## Lopuksi 
  
