--- a/H10.md
+++ b/H10.md
@@ -155,9 +155,10 @@ Seuraavaksi siirryin lisäämän malleja tietokannalle micro-editorilla komenoll
 
     $ micro students/models.py
  
-Lisäsin luokan 'students', joka sisältää muuttujat 'name', 'age' ja 'language'.
+Lisäsin luokan 'student', joka sisältää muuttujat 'name', 'age' ja 'language'.
 
-![image](https://user-images.githubusercontent.com/106889187/221517913-02d86e5b-4f16-4692-83f5-4dd4131c0a9b.png)
+![image](https://user-images.githubusercontent.com/106889187/221525431-bdb4b92c-fb76-4754-b43a-314df440eed4.png)
+
 
 
 
@@ -168,7 +169,6 @@ Tämän jälkeen päivitin tietokannat komennoilla:
     $ ./manage.py migrate
     
   
- ![image](https://user-images.githubusercontent.com/106889187/221518239-e9d99a6d-2330-4290-b6f6-53ce242ae9c3.png)
  
  Seuraavaksi rekisteröin tietokannan muokkaamalla 'students/admin.py' tiedostoa, käyttäen micro-editoria komennolla:
  
@@ -179,9 +179,10 @@ Tämän jälkeen päivitin tietokannat komennoilla:
     from django.contrib import admin
     from . import models
     # Register your models here.
-    admin.site.register(models.students)
+    admin.site.register(models.student)
  
- ![image](https://user-images.githubusercontent.com/106889187/221520216-693a86bd-c0cd-4f2e-91d9-2a0ae81c6640.png)
+![image](https://user-images.githubusercontent.com/106889187/221526583-30524ee6-17a8-454f-916f-b50b8ea1992e.png)
+
 
 
  Seuraavaksi tarkistin uuden tietokannan tomimivuuden ja muokattavuuden ensiksi käynnistämällä kehitysserverin komennolla:
@@ -192,7 +193,10 @@ Ja siirymällä kirjautumaan admin-käyttäjänä selaimessa serverin osoitteess
 
     http://127.0.0.1:8000/admin/
   
-  
+Kirjautuminen onnistui ja pääsin muokkaamaan luomaani tietokantaa. Nimi tosin olisi pitänyt olla pelkkä Stu  
+
+![image](https://user-images.githubusercontent.com/106889187/221524773-17a1fa32-60bf-4425-b081-e57e16244f3e.png)
+
 
  ## Lopuksi 
  
