--- a/H10.md
+++ b/H10.md
@@ -193,23 +193,40 @@ Ja siirymällä kirjautumaan admin-käyttäjänä selaimessa serverin osoitteess
 
     http://127.0.0.1:8000/admin/
   
-Kirjautuminen onnistui ja pääsin muokkaamaan luomaani tietokantaa. Nimi tosin olisi pitänyt olla pelkkä Stu  
+Kirjautuminen onnistui ja pääsin muokkaamaan luomaani tietokantaa.
 
-![image](https://user-images.githubusercontent.com/106889187/221524773-17a1fa32-60bf-4425-b081-e57e16244f3e.png)
+![image](https://user-images.githubusercontent.com/106889187/221526839-d093666a-d377-4500-8fa5-af9b060a13db.png)
+
+![image](https://user-images.githubusercontent.com/106889187/221527204-638c14b2-122d-43ca-973f-f0f80967da2c.png)
+
+Seuraavaksi vaihdoin listatut tiedot objekteista nimiksi avaamalla micro-editorilla tiedoston 'models.py' komennolla:
+
+    $ micro students/models.py
+    
+Ja lisäämällä loppuun:
+
+        def __str__(self):		
+        return self.name	
+        
+ ![image](https://user-images.githubusercontent.com/106889187/221528405-28fd05c0-c5f8-4b0d-98b3-cf1f283835fc.png)
+
+Tarkistin vielä kehitysserverissä muutosten toimivuuden ja oppilaat listautuivat nyt nimien mukaan.
+
+![image](https://user-images.githubusercontent.com/106889187/221528517-9fe20de8-bfce-4ffc-90f6-63271b83f91a.png)
+
 
 
  ## Lopuksi 
  
- Tässä harjoituksessa asensin PostgreSQL:n ja harjoittelin datan luomista, lukemista, päivittämistä ja poistoa.
+ Tässä harjoituksessa loin tietokannan, missä oli weppiliittymä hyödyntäen Djangon kehityspalvelinta
  
  
 ## Lähteet
 
 Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
 
-Install PostgreSQL on Ubuntu – New user and database in 3 commands, Tero Karvinen - 3.3.2016 (https://terokarvinen.com/2016/03/03/install-postgresql-on-ubuntu-new-user-and-database-in-3-commands/)
+Django 4 Instant Customer Database Tutoria, Tero Karvinen - 13.2.2022 (https://terokarvinen.com/2022/django-instant-crm-tutorial/)
 
-PostgreSQL Install and One Table Database – SQL CRUD tutorial for Ubuntu, Tero Karvinen - 5.3.2016 (https://terokarvinen.com/2016/03/05/postgresql-install-and-one-table-database-sql-crud-tutorial-for-ubuntu/)
 
 
 
